2018-01-18  Peter Stephenson  <p.stephenson@samsung.com>

	* 42294: Completion/compinit: disable REPORTTIME in completion.

2018-01-16  Peter Stephenson  <p.stephenson@samsung.com>

	* Warepire: Src/prompt.c: off by one fix in multiline prompts.

2018-01-14  Barton E. Schaefer  <schaefer@zsh.org>

	* 42136: Src/prompt.c: empty string check in %~ / %C expansions

	* 42043: Src/exec.c: ZSH_DEBUG_CMD should not WARN_CREATE_GLOBAL

2018-01-13  Barton E. Schaefer  <schaefer@zsh.org>

	* 42264: Doc/Zsh/expn.yo: Follow-up to previous: Clarify that
	${histchars[1]} may be backslash-escaped even when it isn't '!'.

2018-01-13  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 42261: Doc/Zsh/expn.yo, Doc/Zsh/grammar.yo: docs: Expand
	documentation of $histchars[1]. Joint with Matthew Martin.

2018-01-10  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* Matthew Martin: 42242: Completion/Unix/Command/_ldconfig:
	add [DFNO]BSD to the mix

2018-01-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 42245: Src/hist.c, Src/lex.c, Src/zsh.h: Abort last word on
	interactive comment to avoid it becoming a useless word.

2018-01-05  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* dana: 42231: Completion/Darwin/Command/_caffeinate,
	Completion/Darwin/Command/_mdfind,
	Completion/Darwin/Command/_mdls,
	Completion/Darwin/Command/_mdutil,
	Completion/Darwin/Command/_nvram,
	Completion/Darwin/Command/_osascript,
	Completion/Darwin/Command/_pbcopy,
	Completion/Darwin/Command/_plutil,
	Completion/Darwin/Command/_say,
	Completion/Darwin/Command/_scselect,
	Completion/Darwin/Command/_scutil,
	Completion/Darwin/Command/_sw_vers,
	Completion/Linux/Command/_chattr,
	Completion/Linux/Command/_ldconfig,
	Completion/Linux/Command/_lsattr,
	Completion/Unix/Command/_attr: new completion functions for simple
	utilities belonging to the 'Darwin' and 'Linux' groups.

	* 42230: Completion/Unix/Command/_screen: update to 4.06.01

	* 42229: Completion/Unix/Command/_awk, Completion/Unix/Command/_df,